re PR target/58067 (ICE in GFortran recog.c:2158)

PR target/58067
	* config/i386/i386.c (ix86_delegitimize_address): For CM_MEDIUM_PIC
	and CM_LARGE_PIC ix86_cmodel fall thru into the -m32 code, handle
	there also UNSPEC_PLTOFF.

Co-Authored-By: Alexandre Oliva <aoliva@redhat.com>

From-SVN: r201720